spec/fixtures/invalid_rails_app/config/initializers/secret_token.rb
# Be sure to restart your server when you modify this file.

# Your secret key is used for verifying the integrity of signed cookies.
# If you change this key, all old signed cookies will become invalid!

# Make sure the secret is at least 30 characters and all random,
# no regular words or you'll be exposed to dictionary attacks.
# You can use `rake secret` to generate a secure secret key.

# Make sure your secret_key_base is kept private
# if you're sharing your code publicly.
Invalid::Application.config.secret_key_base = '5ad3a18ee258ed8a5ff14aa38324b4088ac59fef42a56af0ef4e4f3dc1106413627eb3c1d68faa03affb2bef74a0f4cb053fa19334e6ae41ec24c2ed3540f5d4'
